# naturalistic-apparent-motion

./: .gitignore  README.md  TODO.txt  requirements.txt
AD5383_driver/: CMakeLists.txt
AD5383_driver/include/: ad5383.h
AD5383_driver/src/: ad5383.cpp  ad5383.cpp.bak
docs/: Teensy-accelerometers-protocol.doc
naturalistic-apparent-motion/: demo.py  main.py
naturalistic-apparent-motion/cfg/: config.json
naturalistic-apparent-motion/modules/: ActuLine.py  accelerometer_processing.py
naturalistic-apparent-motion/sandbox/: demo_thread_pipe.py  read_usb.py  subproc.py  thread.py
naturalistic-apparent-motion/sandbox/configurator/: main.py
naturalistic-apparent-motion/sandbox/integration_zmq_thread_cfg/: demo.py
naturalistic-apparent-motion/sandbox/integration_zmq_thread_cfg_2/: demo.py  demo.py.bak  demo.py.bak2  demo.py.bak3  demo_display_time_consumption.py
naturalistic-apparent-motion/sandbox/json_read/: test_json_read.py
naturalistic-apparent-motion/sandbox/zeromq_sender/: client.py
naturalistic-apparent-motion/sandbox/zmq_python_cpp_comm/: demo_call_cpp.py
